--- a/C3/blockstests.ipynb
+++ b/C3/blockstests.ipynb
@@ -3218,7 +3218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "aa5c84d5",
    "metadata": {},
    "outputs": [
@@ -3335,19 +3335,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\marri\\AppData\\Local\\Temp\\ipykernel_2700\\569839645.py:16: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "C:\\Users\\marri\\AppData\\Local\\Temp\\ipykernel_2700\\3321686191.py:16: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  sigmas.append((1-sgm/sigma_max))\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95859c3d26c343d980ecf655f6ac041b",
+       "model_id": "3d86754f16aa44e8a9840b8c6b58b7db",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:63669/index.html?ui=P_0x12a459bce00_21&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:63669/index.html?ui=P_0x12a46067d70_22&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
