--- a/Learning FEM/sloptests.ipynb
+++ b/Learning FEM/sloptests.ipynb
@@ -18,19 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "10e5145d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "347a170ce2bc44e59ba7f24378501b76",
+       "model_id": "82c87d2f301544749d8876d6da2a4135",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:62349/index.html?ui=P_0x13fd255d280_6&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:51207/index.html?ui=P_0x156692c2d80_0&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -53,7 +53,7 @@
        "\n"
       ],
       "text/plain": [
-       "PolyData (0x14007a97d60)\n",
+       "PolyData (0x1566876b940)\n",
        "  N Cells:    290\n",
        "  N Points:   292\n",
        "  N Strips:   0\n",
@@ -63,7 +63,7 @@
        "  N Arrays:   0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
