--- a/Learning FEM/sloptests.ipynb
+++ b/Learning FEM/sloptests.ipynb
@@ -25,12 +25,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82c87d2f301544749d8876d6da2a4135",
+       "model_id": "48fc29ffa3fc4df1a855982ab81f8394",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:51207/index.html?ui=P_0x156692c2d80_0&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:63406/index.html?ui=P_0x1935a462cf0_0&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -53,7 +53,7 @@
        "\n"
       ],
       "text/plain": [
-       "PolyData (0x1566876b940)\n",
+       "PolyData (0x19359a27940)\n",
        "  N Cells:    290\n",
        "  N Points:   292\n",
        "  N Strips:   0\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "id": "49fda1ab",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "76ab9ba6",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "688f81e9",
    "metadata": {},
    "outputs": [
@@ -308,17 +308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "id": "74bd67fc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x13fe1156540>]"
+       "[<matplotlib.lines.Line2D at 0x1936b121280>]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "id": "e89ea799",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "id": "d39d48a8",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
        "        False, False, False, False, False, False]))"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "id": "99e50217",
    "metadata": {},
    "outputs": [
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "id": "956aa3d1",
    "metadata": {},
    "outputs": [
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "id": "b3c08e11",
    "metadata": {},
    "outputs": [
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "id": "b9951de0",
    "metadata": {},
    "outputs": [
@@ -965,19 +965,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "id": "a0bcdcfa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50b56fafce0f440996d71495cc0bf1af",
+       "model_id": "e9ed3a28006841aba02fc6c508c4e0b7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:62349/index.html?ui=P_0x13fdbbad9d0_7&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:63406/index.html?ui=P_0x1936afa78f0_1&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "id": "62194dc8",
    "metadata": {},
    "outputs": [],
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "id": "33407848",
    "metadata": {},
    "outputs": [],
@@ -1121,19 +1121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "id": "bf2583d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e014b5c95ee947a2a062f9aaf5aa9721",
+       "model_id": "be401290c46140f49def69289f6c827f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:62349/index.html?ui=P_0x13fd17d2ba0_8&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:63406/index.html?ui=P_0x1936b171340_2&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "id": "e9c1ea89",
    "metadata": {},
    "outputs": [
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "id": "52e3158d",
    "metadata": {},
    "outputs": [
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "id": "a79ed3db",
    "metadata": {},
    "outputs": [
