--- a/Learning FEM/sloptests.ipynb
+++ b/Learning FEM/sloptests.ipynb
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "a79ed3db",
    "metadata": {},
    "outputs": [
@@ -1262,6 +1262,17 @@
       "[1.17857143 2.         0.        ] 0.0 0.0 0.0\n",
       "[ 0.48571429 18.          0.        ] -2.6680403513779806e-05 -2.719825273592115e-06 0.0011739576474339346\n",
       "[ 0.60714286 18.          0.        ] -2.6680220114441284e-05 -2.4166096984893785e-06 0.001173221218928656\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
