--- a/C3/blockstests.ipynb
+++ b/C3/blockstests.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "b5d32026",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "e4083a16",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "7beefe8b",
    "metadata": {},
    "outputs": [],
@@ -64,13 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "274833c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "'''Solution cell - run at your own risk XD'''\n",
-    "sol = bl.fem_linear_block(csts, meshOut, load_case, True)"
+    "sol = bl.fem_linear_block(csts, meshOut, load_case, True, True)"
    ]
   },
   {
