--- a/C3/blockstests.ipynb
+++ b/C3/blockstests.ipynb
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 87,
    "id": "44e0721e",
    "metadata": {},
    "outputs": [],
@@ -808,7 +808,7 @@
     "        zbarxx = t*(nc*h*(h+t)+t*wx)/2/Axx #always defined facing inwards - for other section properties only!!!\n",
     "        Ixx = wx*t**3/12+wx*t*(zbarxx-t/2)**2+nc*h**3*t/12+nc*h*t*((h+t)/2-zbarxx)**2\n",
     "        Qxx = nc*(h+t-zbarxx)**2/2*t #centroid moment for shear\n",
-    "        wx = nc*t #shear width for shear in z\n",
+    "        wsx = nc*t #shear width for shear in z\n",
     "        Ayy = t*(nb*h+wy)\n",
     "        zbaryy = t*(nb*h*(h+t)+t*wy)/2/Ayy #always defined facing inwards - for other section properties only!!!\n",
     "        Iyy = wy*t**3/12+wy*t*(zbaryy-t/2)**2+nb*h**3*t/12+nb*h*t*((h+t)/2-zbaryy)**2\n",
@@ -817,7 +817,7 @@
     "        posesForQzz = stiffxs[-int(int(nc)/2):] #computing Q in the meantime, as it also uses the stiffener spacings\n",
     "        Qzz = wx/4*wx/2*t+posesForQzz.sum()*h*t\n",
     "        Izz = t*wx**3/12+h*t*(stiffxs**2).sum() #we do not need Iyy on the spanwsie wall, see assumptions\n",
-    "        wz = t #width in z for shear in x\n",
+    "        wsz = t #width in z for shear in x\n",
     "        #x and y coords can be seen as +-wx/2 and +-wy/2, respectively, z coords depend of which skin we are looking at:\n",
     "        if top:\n",
     "            zmax = -zbarxx\n",
@@ -831,8 +831,8 @@
     "        srs_ele, trs_ele = list(), list() #later averaged\n",
     "        for cft in sorted_cfts.values():\n",
     "            \"3.1) particular stresses\"\n",
-    "            tau_z = abs(cft.Fz)*Qxx/wx/Ixx\n",
-    "            tau_xy = abs(cft.Fx)*Qzz/wz/Izz\n",
+    "            tau_z = abs(cft.Fz)*Qxx/wsx/Ixx\n",
+    "            tau_xy = abs(cft.Fx)*Qzz/wsz/Izz\n",
     "            sigma_x_zmax = cft.My*zmax/Iyy\n",
     "            sigma_x_zmin = cft.My*zmin/Iyy\n",
     "            sigma_y = lambda x, z: cft.Fy/Axx-cft.Mx*z/Ixx+cft.Mz*x/Izz\n",
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 88,
    "id": "f71735dc",
    "metadata": {},
    "outputs": [
@@ -875,7 +875,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11271612.072904939 11884096.550944326\n"
+      "187036.56081391516 198302.56350124363\n"
      ]
     }
    ],
@@ -970,19 +970,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 86,
    "id": "06cf6734",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5ffca4f55704e21834af0c1429ba1ed",
+       "model_id": "e2ae0b0d14cd46139cfd683bc63824b1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:58964/index.html?ui=P_0x24e95193a40_11&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:58964/index.html?ui=P_0x24ea2a0cc50_14&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -1002,7 +1002,7 @@
     "types = [pv.CellType.QUAD]*len(quads2plot)\n",
     "\n",
     "pl.show_axes()\n",
-    "pl.add_mesh(pv.UnstructuredGrid(conns, types, ncoords), scalars=[quad.tau for quad in quads2plot])\n",
+    "pl.add_mesh(pv.UnstructuredGrid(conns, types, ncoords), scalars=[min(quad.tau, 10) for quad in quads2plot])\n",
     "pl.add_scalar_bar()\n",
     "pl.show()"
    ]
