--- a/Learning FEM/sloptests.ipynb
+++ b/Learning FEM/sloptests.ipynb
@@ -18,19 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "10e5145d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48fc29ffa3fc4df1a855982ab81f8394",
+       "model_id": "c38cc66bcd6b4c32bc2ea4bc4676018e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:63406/index.html?ui=P_0x1935a462cf0_0&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:54735/index.html?ui=P_0x24cbf008f80_2&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -53,7 +53,7 @@
        "\n"
       ],
       "text/plain": [
-       "PolyData (0x19359a27940)\n",
+       "PolyData (0x24cba21ee60)\n",
        "  N Cells:    290\n",
        "  N Points:   292\n",
        "  N Strips:   0\n",
@@ -63,7 +63,7 @@
        "  N Arrays:   0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "49fda1ab",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
     "\n",
     "# Define freestream conditions\n",
     "op_point = asb.OperatingPoint(\n",
-    "    velocity=70,      # m/s\n",
+    "    velocity=-70,      # m/s\n",
     "    alpha=5,          # degrees\n",
     "    beta=0,           # degrees\n",
     "    atmosphere=asb.Atmosphere(6000)\n",
