--- a/C3/blockstests.ipynb
+++ b/C3/blockstests.ipynb
@@ -955,7 +955,6 @@
     "        self.Mx = 0\n",
     "        self.My = 0\n",
     "        self.Mz = 0\n",
-    "        \n",
     "\n",
     "class NodeCoordsFint():\n",
     "    def __init__(self, ncoord:nt.NDArray[np.float64], finte:nt.NDArray[np.float64], ele:p3g.QuadWithProp):\n",
@@ -1068,9 +1067,11 @@
     "    #TODO: Add a shear centre and calculate My about the shear centre\n",
     "    ics.My = My_t+My_b-Fz_t*(centroid_t.x-ics.centroid.y)-Fz_b*(centroid_b.x-ics.centroid.y)+Fx_t*(centroid_t.y-ics.centroid.y)+Fx_b*(centroid_b.y-ics.centroid.y)\n",
     "    ics.Mz = Mz_t+Mz_b\n",
-    "    #TODO we need to find the neutral axis and account for skin contributions\n",
-    "    ics.booms_bot = booms_b\n",
-    "    ics.booms_top = booms_t\n",
+    "    #We need to find the normal stresses for boom contributions\n",
+    "    sigma = lambda x,z: ((ics.Mz*ics.Ixx+ics.Mx*ics.Ixz)*x-(ics.Mz*ics.Ixz+ics.Mx*ics.Izz)*z)/(ics.Ixx*ics.Izz-ics.Ixz*ics.Ixz) \n",
+    "    sigmas_top = [sigma(boom[1].x, boom[1].y) for boom in ics.booms_top] #normal stress proportionalities for the top cross section\n",
+    "    sigmas_bot = [sigma(boom[1].x, boom[1].y) for boom in ics.booms_bot]\n",
+    "\n",
     "\n",
     "    return ics\n"
    ]
