--- a/C3/blockstests.ipynb
+++ b/C3/blockstests.ipynb
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "44e0721e",
    "metadata": {},
    "outputs": [],
@@ -1141,7 +1141,7 @@
     "    ics.booms_top = skin_contribs(booms_t, ics.sigma_top, sizerVars[\"tskin\"])\n",
     "    ics.booms_bot = skin_contribs(booms_b, ics.sigma_bot, sizerVars[\"tskin\"])\n",
     "    \n",
-    "    \"5) Shear solution as on August 24th page\"\n",
+    "    \"5) Shear solution as on August 24th-26th page\"\n",
     "    icentr, iIxx, iIzz, iIxz = idealised_properties(ics.booms_bot+ics.booms_top)\n",
     "    qbcx = -(ics.Fx*iIxx)/(iIxx*iIzz-iIxz**2)\n",
     "    qbcz = (ics.Fx*iIxz)/(iIxx*iIzz-iIxz**2)\n",
