--- a/C3/blockstests.ipynb
+++ b/C3/blockstests.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7beefe8b",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "274833c1",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "7cc9141b",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "6b242096",
    "metadata": {},
    "outputs": [],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "0eb0084d",
    "metadata": {},
    "outputs": [],
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "7036d4e0",
    "metadata": {},
    "outputs": [],
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "54c3c987",
    "metadata": {},
    "outputs": [
@@ -871,7 +871,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'rl': {'buc': 1.3202552363778421, 'tau': 0.4797786901158488, 'sgm': 1.2261406821171708}, 'lt': {'buc': 1.4131485332769036, 'tau': 0.5948640315554393, 'sgm': 1.411638533925279}, 'lg': {'buc': 0.9579835020308926, 'tau': 0.6230649382554337, 'sgm': 1.004691888975585}, 'rb': {'buc': 1.2038336481182552, 'tau': 1.773419645807059, 'sgm': 1.2680958984283075}, 'sp': {'buc': 0.47586432516164834, 'tau': 0.12032537840352557, 'sgm': 0.46235530884964227}}\n"
+      "{'rl': {'buc': 1.3202552364158582, 'tau': 0.47977869009881474, 'sgm': 1.2261406821524767}, 'lt': {'buc': 1.4131485333574012, 'tau': 0.5948640318052204, 'sgm': 1.4116385340056907}, 'lg': {'buc': 0.9579835020906643, 'tau': 0.6230649383926392, 'sgm': 1.004691889153479}, 'rb': {'buc': 1.2038336480989025, 'tau': 1.7734196458422136, 'sgm': 1.2680958984051798}, 'sp': {'buc': 0.4758643251228855, 'tau': 0.12032537840242742, 'sgm': 0.4623553088119799}}\n"
      ]
     }
    ],
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "44e0721e",
    "metadata": {},
    "outputs": [],
@@ -1085,11 +1085,11 @@
     "        moment_sign = gcl.momentSign2D(boomdir, qbdir)\n",
     "        moment_arm = boomline.point_distance(centroid)\n",
     "        Mqbs[i] = moment_sign*moment_arm*boomdist*qbs[i+1]\n",
-    "        twists[i] = moment_sign*qbs[i+1]/Gt/moment_arm\n",
+    "        #twists[i] = moment_sign*qbs[i+1]/Gt/moment_arm\n",
     "    \n",
     "    diff = qbs[-1]+cx*booms[-1][0]*(booms[-1][1].x-centroid.x)+cy*booms[-1][0]*(booms[-1][1].y-centroid.y)\n",
     "    assert np.isclose(diff, 0, atol=.05*max(abs(qbs))), f\"{qbs}, {diff}\"\n",
-    "    return qbs[1:], sum(Mqbs), sum(qbdxs), sum(qbdys), sum(twists)\n",
+    "    return qbs[1:], sum(Mqbs), sum(qbdxs), sum(qbdys)#, sum(twists)\n",
     "\n",
     "def shear_coeffs(booms:ty.List[ty.List[object]], centroid:gcl.Point2D, Gt:float):\n",
     "    '''matrix coefficients for the shear equations as derived on the August 24th page'''\n",
@@ -1100,16 +1100,18 @@
     "    hqs = [lineq.point_distance(centroid) for lineq in lineqs] #shear flow moment arm lengths\n",
     "    #for now we reuse one of the normal directions, the curvature is so small that it really shouldn't matter\n",
     "    dirtaus = [gcl.Direction2D.normal_towards(gcl.Direction2D.from_pts(boom[1], centroid), dirq) for boom, dirq in zip(booms, dirqs+[dirqs[-1]])] #local dir of transverse shear\n",
+    "    dircAs = [gcl.Direction2D.from_pts(centroid, boom[1]) for boom in booms]\n",
+    "    htaus = [gcl.Line2D(boom[1], dirtau).point_distance(centroid) for boom, dirtau in zip(booms, dirtaus)]\n",
     "\n",
     "    #coefficients - we skin torque effects on transverse shear as twist is not computable (torsional constant) and moment makes like 2% difference\n",
     "    _2Am = sum(l*h for l, h in zip(ls, hqs)) #the 2*Am coefficient which is sum(2*(1/2*l_i*h_i))=sum(l_i*h_i)\n",
-    "    ctwistq = sum(ls)/_2Am/Gt #the relation between the twist and the shear flow\n",
+    "    cm = sum(htau*boom[0]*gcl.momentSign2D(dircA, dirtau) for htau, boom, dircA, dirtau in zip(htaus, booms, dircAs, dirtaus))\n",
     "    Axfrac = sum(boom[0]*dirtau.x for boom, dirtau in zip(booms, dirtaus))\n",
     "    Azfrac = sum(boom[0]*dirtau.y for boom, dirtau in zip(booms, dirtaus))\n",
     "    intx = sum(dirq.x*l for dirq, l in zip(dirqs, ls))\n",
     "    intz = sum(dirq.y*l for dirq, l in zip(dirqs, ls))\n",
     "\n",
-    "    return _2Am, ctwistq, Axfrac, Azfrac, intx, intz\n",
+    "    return _2Am, cm, Axfrac, Azfrac, intx, intz\n",
     "\n",
     "\n",
     "def physical_interpretation(meshOut:ty.Dict[str, object], top_sec:ty.List[p3g.QuadWithProp], bot_sec:ty.List[p3g.QuadWithProp], csts:ty.Dict[str, object], sizerVars:ty.Dict[str, float]):\n",
@@ -1146,68 +1148,31 @@
     "    qbcx = -(ics.Fx*iIxx)/(iIxx*iIzz-iIxz**2)\n",
     "    qbcz = (ics.Fx*iIxz)/(iIxx*iIzz-iIxz**2)\n",
     "    Gt = csts[\"E_ALU\"]/2/(1+.3)*5/6*sizerVars[\"tskin\"] #NOTE assume scf = 5/6\n",
-    "    qb_top, Mqb_top, qbdx_top, qbdz_top, twist_qb_top = basic_shearfl(ics.booms_top, qbcx, qbcz, icentr, Gt)\n",
-    "    qb_bot, Mqb_bot, qbdx_bot, qbdz_bot, twist_qb_bot = basic_shearfl(ics.booms_bot, qbcx, qbcz, icentr, Gt)\n",
-    "    _2Am_t, ctwt_t, Axfr_t, Azfr_t, intx_t, intz_t = shear_coeffs(ics.booms_top, icentr, Gt)\n",
-    "    _2Am_b, ctwt_b, Axfr_b, Azfr_b, intx_b, intz_b = shear_coeffs(ics.booms_bot, icentr, Gt)\n",
+    "    qb_top, Mqb_top, qbdx_top, qbdz_top = basic_shearfl(ics.booms_top, qbcx, qbcz, icentr, Gt)\n",
+    "    qb_bot, Mqb_bot, qbdx_bot, qbdz_bot = basic_shearfl(ics.booms_bot, qbcx, qbcz, icentr, Gt)\n",
+    "    _2Am_t, cm_t, Axfr_t, Azfr_t, intx_t, intz_t = shear_coeffs(ics.booms_top, icentr, Gt)\n",
+    "    _2Am_b, cm_b, Axfr_b, Azfr_b, intx_b, intz_b = shear_coeffs(ics.booms_bot, icentr, Gt)\n",
     "\n",
+    "    shear_mat = np.matrix(f'''\n",
+    "    {cm_t} {cm_b} {_2Am_t} {_2Am_b};\n",
+    "    {Azfr_t} 0 {intz_t} 0;\n",
+    "    0 {Azfr_b} 0 {intz_b};\n",
+    "    {Axfr_t} {Axfr_b} {intx_t} {intx_b}\n",
+    "    ''')\n",
+    "\n",
+    "    shear_free_vect = np.matrix(f'''{ics.My-Mqb_top-Mqb_bot}; {Fz_t-qbdz_top}; {Fz_b-qbdz_bot}; {ics.Fx-qbdx_top-qbdx_bot}''')\n",
+    "\n",
+    "    tau_t, tau_b, qs0_t, qs0_b = np.linalg.inv(shear_mat) @ shear_free_vect\n",
     "\n",
     "    return ics\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "f71735dc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:51: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_1 = np.arccos(dir1.x+target_dir.x+dir1.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:52: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_2 = np.arccos(dir2.x+target_dir.x+dir2.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:51: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_1 = np.arccos(dir1.x+target_dir.x+dir1.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:52: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_2 = np.arccos(dir2.x+target_dir.x+dir2.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:51: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_1 = np.arccos(dir1.x+target_dir.x+dir1.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:52: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_2 = np.arccos(dir2.x+target_dir.x+dir2.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:51: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_1 = np.arccos(dir1.x+target_dir.x+dir1.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:52: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_2 = np.arccos(dir2.x+target_dir.x+dir2.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:51: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_1 = np.arccos(dir1.x+target_dir.x+dir1.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:52: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_2 = np.arccos(dir2.x+target_dir.x+dir2.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:51: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_1 = np.arccos(dir1.x+target_dir.x+dir1.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:52: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_2 = np.arccos(dir2.x+target_dir.x+dir2.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:51: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_1 = np.arccos(dir1.x+target_dir.x+dir1.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:52: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_2 = np.arccos(dir2.x+target_dir.x+dir2.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:51: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_1 = np.arccos(dir1.x+target_dir.x+dir1.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:52: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_2 = np.arccos(dir2.x+target_dir.x+dir2.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:51: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_1 = np.arccos(dir1.x+target_dir.x+dir1.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:52: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_2 = np.arccos(dir2.x+target_dir.x+dir2.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:51: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_1 = np.arccos(dir1.x+target_dir.x+dir1.y+target_dir.y)\n",
-      "c:\\Users\\marri\\OneDrive\\Dokumenty\\GitHub\\TWP\\C3\\geometricClasses.py:52: RuntimeWarning: invalid value encountered in arccos\n",
-      "  angle_2 = np.arccos(dir2.x+target_dir.x+dir2.y+target_dir.y)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cstop, csbot = obtain_cross_sections(meshOut)\n",
     "crossecs:ty.List[InterpretedCrossSection] = list()\n",
@@ -1367,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "44d18b86",
    "metadata": {},
    "outputs": [],
