--- a/C3/blockstests.ipynb
+++ b/C3/blockstests.ipynb
@@ -153,19 +153,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9f2ba92b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4b7840fd06a493293a2adecfe7b415a",
+       "model_id": "d6ef70cbd537471787fa2ed95fb20ce1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:61266/index.html?ui=P_0x1f25ab428a0_0&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:64468/index.html?ui=P_0x1afc84e44d0_0&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
