added a check on the battery mass, refined landing load factor

--- a/C3/massChecks.ipynb
+++ b/C3/massChecks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "a150d2ad",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0e43a54e",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "aa664a75",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "ae4acbd6",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "238b42db",
    "metadata": {},
    "outputs": [
@@ -94,13 +94,50 @@
     }
    ],
    "source": [
-    "totmass = quad_tot_mass+sum(beam_tot_masses.values())\n",
+    "totSizeableMmass = quad_tot_mass+sum(beam_tot_masses.values())\n",
+    "totSizeableWeight = cst.CONSTS[\"G0\"]*totSizeableMmass\n",
     "print(f\"skin mass: {quad_tot_mass} kg\")\n",
     "print(\"Masses of beam elements:\")\n",
     "for key, val in beam_tot_masses.items():\n",
     "    print(f\"{key}: {val} kg\") \n",
-    "print(f\"\\nTotal mass: {totmass} kg\")\n",
-    "print(f\"Total weight: {cst.CONSTS[\"G0\"]*totmass} N\")"
+    "print(f\"\\nTotal mass: {totSizeableMmass} kg\")\n",
+    "print(f\"Total weight: {totSizeableWeight} N\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b98700c2",
+   "metadata": {},
+   "source": [
+    "Weight from pure inertia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "45f5aca6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total mass from inertia: 23655.999999999694\n",
+      "total mass: 25880.290351791344\n",
+      "Total weight: 253885.6483510731\n",
+      "tot_weight_with_load_factor: 1079014.0054920607\n"
+     ]
+    }
+   ],
+   "source": [
+    "mesh = meshOut[\"mesh\"]\n",
+    "tot_inertia_mass = sum([ine.mn for ine in mesh.inertia])\n",
+    "totmass = totSizeableMmass+tot_inertia_mass\n",
+    "totweight = cst.CONSTS[\"G0\"]*totmass\n",
+    "print(f\"Total mass from inertia: {tot_inertia_mass}\")\n",
+    "print(f\"total mass: {totmass}\")\n",
+    "print(f\"Total weight: {totweight}\")\n",
+    "print(f\"tot_weight_with_load_factor: {4.25*totweight}\")"
    ]
   }
  ],
