--- a/Learning FEM/sloptests.ipynb
+++ b/Learning FEM/sloptests.ipynb
@@ -18,19 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "10e5145d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c38cc66bcd6b4c32bc2ea4bc4676018e",
+       "model_id": "171de1ddea07497c8e99874ad75a6eba",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54735/index.html?ui=P_0x24cbf008f80_2&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:55822/index.html?ui=P_0x1d4ab63a4e0_0&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -53,7 +53,7 @@
        "\n"
       ],
       "text/plain": [
-       "PolyData (0x24cba21ee60)\n",
+       "PolyData (0x1d4d6349900)\n",
        "  N Cells:    290\n",
        "  N Points:   292\n",
        "  N Strips:   0\n",
@@ -63,7 +63,7 @@
        "  N Arrays:   0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "49fda1ab",
    "metadata": {},
    "outputs": [
