--- a/Learning FEM/sloptests.ipynb
+++ b/Learning FEM/sloptests.ipynb
@@ -18,19 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "10e5145d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "171de1ddea07497c8e99874ad75a6eba",
+       "model_id": "bb6a64da04dd41a497f996a90f475ad6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:55822/index.html?ui=P_0x1d4ab63a4e0_0&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:54788/index.html?ui=P_0x1da1a8878f0_1&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -53,7 +53,7 @@
        "\n"
       ],
       "text/plain": [
-       "PolyData (0x1d4d6349900)\n",
+       "PolyData (0x1da1a952380)\n",
        "  N Cells:    290\n",
        "  N Points:   292\n",
        "  N Strips:   0\n",
@@ -63,7 +63,7 @@
        "  N Arrays:   0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
     "airplane = asb.Airplane(\n",
     "    name=\"Custom 8-Engine Aircraft\",\n",
     "    wings=[wing],\n",
-    "    propulsors=propulsors\n",
+    "    #propulsors=propulsors\n",
     ")\n",
     "\n",
     "airplane.draw()"
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "49fda1ab",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
      "output_type": "stream",
      "text": [
       "Forces total:\n",
-      "[-1.03803109e+04 -6.30051566e-14  1.45295931e+05]\n"
+      "[-1.06142215e+04 -4.11129464e-16  1.49699723e+05]\n"
      ]
     }
    ],
@@ -166,7 +166,7 @@
     "        airplane=airplane,\n",
     "        op_point=op_point,\n",
     "        spanwise_resolution=20,\n",
-    "        chordwise_resolution=5\n",
+    "        chordwise_resolution=10\n",
     "    )\n",
     "\n",
     "    # Run the VLM analysis\n",
@@ -180,7 +180,7 @@
     "\n",
     "# Define freestream conditions\n",
     "op_point = asb.OperatingPoint(\n",
-    "    velocity=-70,      # m/s\n",
+    "    velocity=70,      # m/s\n",
     "    alpha=5,          # degrees\n",
     "    beta=0,           # degrees\n",
     "    atmosphere=asb.Atmosphere(6000)\n",
